--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,105 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
+
 
 android {
-    compileSdk 32
+    compileSdkVersion versions.compileSdkVersion
+    buildToolsVersion versions.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.nts.applock"
-        minSdk 21
-        targetSdk 32
+        applicationId "com.tapbi.applock"
+        minSdkVersion versions.minSdkVersion
+        targetSdkVersion versions.targetSdkVersion
         versionCode 1
         versionName "1.0"
-
+        flavorDimensions "default"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+        renderscriptTargetApi 29
+        renderscriptSupportModeEnabled true
+
     }
+
 
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xmaxerrs" << "500" // or whatever number you want
+        }
+    }
+    buildFeatures{
+        dataBinding true // for data binding
+        viewBinding true // for view binding
+    }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+    productFlavors {
+        product {
+            dimension "default"
+        }
+        dev {
+            dimension "default"
+            applicationId = 'com.tapbi.applock'
+
+        }
     }
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation project(path: ':patternlockview')
+
+    implementation libraries.androidAppCopmpat
+    implementation libraries.multidex
+    /*UI*/
+    implementation libraries.androidxNavigation
+    implementation libraries.androidUICommon
+    implementation libraries.materialDesign
+    implementation libraries.hilt
+    /*Firebase*/
+    implementation platform("com.google.firebase:firebase-bom:$versions.firebaseVersion")
+    implementation libraries.firebase
+
+    /*Database ( if use Room) */
+    implementation libraries.room
+    implementation libraries.roomRxjava
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    annotationProcessor libraries.roomAP
+    /*Other*/
+    implementation libraries.rxJava
+    implementation libraries.retrofitWithLogger
+    implementation libraries.retrofitRXjavaAdapter
+    implementation libraries.timberLog
+    implementation libraries.eventBus
+    annotationProcessor libraries.hiltAP
+    implementation libraries.glide
+    annotationProcessor libraries.glideAP
+    /*Test*/
+    //noinspection GradleDependency
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation testLib
+    // hilt
+    implementation libraries.hilt
+    annotationProcessor libraries.hiltAP
+    implementation libraries.rxJava
+    implementation libraries.retrofitWithLogger
+    implementation libraries.retrofitRXjavaAdapter
+
+    implementation "androidx.biometric:biometric:1.1.0"
+    implementation 'com.jaeger.statusbarutil:library:1.4.0'
 }
